# mcgillij.dev

./: .gitignore  LICENSE  Makefile  Pipfile  README.md  article_template.rst  maptest.rst  pelicanconf.py  publishconf.py  pyproject.toml
content/: 20_years_of_debian.rst  35_mins.rst  advent_of_code_2021.rst  amd-stable-diffusion-experiments.rst  amdfan_first_release.rst  amdfan_update_2022.rst  amdfan_update_2022_2.rst  april_15_out_in_bayers.rst  arch-after-6-months.rst  atiyas_quest_2025_updates.rst  atiyas_quest_release.rst  atiyas_quest_website.rst  aur_with_chroot.rst  automate_the_small_things.rst  bayers_lake.rst  bitwarden.rst  cpu_governor.rst  cyberpunk_vfio.rst  dead_cells.rst  debian11.rst  disconnected_mouse.rst  downgrading-kernel-arch.rst  dwarf-fortress.rst  elden_ring_linux_eac.rst  encrypted_disks.rst  exa-ls-replacement.rst  fancy_term.rst  fast-arch-mirrors.rst  first_drone_flight.rst  foundry.rst  fzf-dracula.rst  get_latest_proton.rst  git-sign-with-ssh.rst  glove80.rst  godot-patterns-event-bus.rst  godot-patterns-prefab.rst  godot-vs-python.rst  godot_getting_started_with_arch.rst  hello-gemini.rst  hollow_knight.rst  (+63 more)
content/extras/: error.html  robots.txt
content/pages/: about.rst  amdfan.rst  blog.rst  misc.rst  privacy.rst  projects.rst  vfio-resources.rst
temp/: panotest.rst  vegas.rst
theme/static/css/: custom.css  main.css  normalize.css  youtube.css
theme/static/html/: pannellum.htm
theme/templates/: article.html  author.html  base.html  blog.html  category.html  index.html  main.html  page.html  tags.html
(+1 files in other folders)
