[tool.poetry]
name = "mcgillij.dev"
version = "0.1.0"
description = ""
authors = ["mcgillij <mcgillivray.jason@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
pelican = "4.11.0"
typogrify = "*"
Markdown = "*"
beautifulsoup4 = "*"
pysvg-py3 = "*"
Pillow = "*"
cssutils = "*"
css-html-js-minify = "*"
lxml = "*"
sphinx-gemini-builder = "*"
piexif = "*"
awscliv2 = "*"
legacy-cgi = "^2.6.2"
pytz = "^2025.2"

[tool.poetry.dev-dependencies]
neovim = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
